<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AddRecipes">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/RecipeNameCard"
                android:layout_width="350sp"
                android:layout_height="104dp"
                android:layout_gravity="center"
                android:layout_marginTop="40sp"
                app:cardBackgroundColor="#DAFFFFFF"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/RecipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/recipe_name"
                    android:inputType="textPersonName"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/IngredientsCard"
                android:layout_width="350sp"
                android:layout_height="317dp"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                app:cardBackgroundColor="#DAFFFFFF"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/IngredientsNquantity"
                    android:layout_width="match_parent"
                    android:layout_height="267dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/ingredients_quantity"
                    android:inputType="textMultiLine" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/StepsCard"
                android:layout_width="350sp"
                android:layout_height="317dp"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                app:cardBackgroundColor="#DAFFFFFF"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/RecipeSteps"
                    android:layout_width="match_parent"
                    android:layout_height="250sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/recipe_steps_and_procedure"
                    android:inputType="textMultiLine"
                    android:singleLine="false" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/TimeCard"
                android:layout_width="350sp"
                android:layout_height="123dp"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="30sp"
                app:cardBackgroundColor="#DAFFFFFF"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/TimeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/approx_time_required_min"
                    android:inputType="number|numberDecimal|time"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20sp"
                android:elevation="5sp"
                android:text="@string/btnSave" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>